--- a/app/src/main/res/layout/activity_adding_food.xml
+++ b/app/src/main/res/layout/activity_adding_food.xml
@@ -12,7 +12,7 @@ tools:context="com.example.agnieszka.kidneyapp20.AddingFood">
 
 
 <Button
-    android:text="Button"
+    android:text="Find the product"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/search_button"
