--- a/app/src/main/res/layout/activity_choose_the_meal_fragment.xml
+++ b/app/src/main/res/layout/activity_choose_the_meal_fragment.xml
@@ -21,6 +21,22 @@
             android:id="@+id/values_text"
             android:layout_height="wrap_content" />
 
+        <TextView android:text="Enter amount [g/ml]: " android:layout_width="wrap_content"
+            android:id="@+id/enter_amount_text"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textNoSuggestions"
+            android:layout_marginLeft="23dp"
+            android:layout_marginStart="23dp"
+            android:id="@+id/type_amount"
+            android:layout_marginTop="33dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
         <Button
             android:text="Consume"
             android:layout_width="wrap_content"
@@ -44,7 +60,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </FrameLayout>
