--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,7 +22,8 @@
         android:id="@+id/listview_journal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null"
+        android:divider="@color/kidney_dark_blue"
+        android:dividerHeight="1dip"
         android:layout_below="@+id/add_food_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
