--- a/app/src/main/res/drawable-v21/today_touch_selector.xml
+++ b/app/src/main/res/drawable-v21/today_touch_selector.xml
@@ -11,5 +11,5 @@
     <item android:state_selected="true"
         android:drawable="@color/kidney_light_blue"/>
 
-    <item android:drawable="@color/kidney_blue" />
+    <item android:drawable="@color/kidney_red" />
 </selector>
