--- a/app/src/main/res/layout/journal_main.xml
+++ b/app/src/main/res/layout/journal_main.xml
@@ -6,7 +6,7 @@
 
     <ListView
         style="@style/ForecastListStyle"
-        android:id="@+id/listview_journal"
+        android:id="@+id/listview_values"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@null" />
@@ -17,6 +17,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:id="@+id/add_food_button"
-        android:backgroundTint="@color/kidney_blue" />
+        android:backgroundTint="@color/kidney_red" />
+
+    <ListView
+        style="@style/ForecastListStyle"
+        android:id="@+id/listview_journal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/kidney_dark_blue"
+        android:dividerHeight="1dip"
+        android:layout_below="@+id/listview_values"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </FrameLayout>
