--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -42,6 +42,13 @@
             android:divider="@color/kidney_dark_blue"
             android:dividerHeight="1dip" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/kidney_dark_blue"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"/>
+
         <ListView
             style="@style/ForecastListStyle"
             android:id="@+id/listview_journal"
