--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/add_food_button"
-            android:backgroundTint="@color/kidney_red"
+            android:backgroundTint="@color/kidney_light_blue"
             android:layout_marginTop="25dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -26,10 +26,10 @@
 
         <Button
             android:text="Delete all records"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/delete_all_button"
-            android:backgroundTint="@color/kidney_red"
+            android:backgroundTint="@color/kidney_light_blue"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="25dp"/>
