--- a/app/src/main/res/layout/fragment_detail2.xml
+++ b/app/src/main/res/layout/fragment_detail2.xml
@@ -1,13 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
-android:paddingBottom="@dimen/activity_vertical_margin"
-tools:context="com.example.agnieszka.kidneyapp20.DetailActivity2$DetailFragment2">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.agnieszka.kidneyapp20.DetailActivity2$DetailFragment2">
 
-<TextView android:layout_width="wrap_content"
-    android:id="@+id/detail_text"
-    android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dip" >
 
-</RelativeLayout>
+        <TextView android:layout_width="wrap_content"
+        android:id="@+id/detail_text"
+        android:layout_height="wrap_content"
+        />
+
+        <Button
+            android:text="Delete the meal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/delete_button"
+            android:backgroundTint="@color/kidney_light_blue"
+            android:layout_marginTop="25dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="25dp"/>
+
+        <TextView android:layout_width="wrap_content"
+            android:id="@+id/uri_text"
+            android:layout_height="wrap_content"
+            />
+
+    </LinearLayout>
+</ScrollView>
