--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,6 +25,17 @@
             android:layout_marginBottom="25dp"/>
 
         <Button
+            android:text="Handle SQL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/sql_button"
+            android:backgroundTint="@color/kidney_light_blue"
+            android:layout_marginTop="25dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="25dp"/>
+
+        <Button
             android:text="Delete all records"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
