--- a/app/src/main/res/layout/fragment_detail2.xml
+++ b/app/src/main/res/layout/fragment_detail2.xml
@@ -14,6 +14,12 @@
         android:layout_height="wrap_content"
         />
 
+        <TextView android:layout_width="wrap_content"
+            android:id="@+id/detail_text2"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            />
+
         <Button
             android:text="Delete the meal"
             android:layout_width="wrap_content"
@@ -28,6 +34,7 @@
         <TextView android:layout_width="wrap_content"
             android:id="@+id/uri_text"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             />
 
     </LinearLayout>
