--- a/app/src/main/res/layout/list_item_kidney_journal_adapter.xml
+++ b/app/src/main/res/layout/list_item_kidney_journal_adapter.xml
@@ -2,24 +2,25 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="14dp">
 
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:paddingLeft="16dp">
+        android:gravity="left"
+        android:paddingLeft="0dp">
 
     <ImageView
         android:id="@+id/list_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:gravity="center_vertical"
         android:src="@drawable/sztucce"/>
 
 
@@ -27,8 +28,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:gravity="center_vertical"
-        android:id="@+id/list_item_kidney_journal_adapter_textview2" />
+        android:layout_gravity="center_vertical"
+        android:id="@+id/list_item_kidney_journal_adapter_textview2"
+        android:paddingTop="4dp"/>
 
         </LinearLayout>
 
