--- a/app/src/main/res/layout/list_item_kidney_adapter.xml
+++ b/app/src/main/res/layout/list_item_kidney_adapter.xml
@@ -25,13 +25,14 @@
             android:src="@drawable/calendar30" />
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:fontFamily="sans-serif-condensed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?android:attr/listPreferredItemHeight"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:id="@+id/list_item_kidney_adapter_textview2"
-            android:paddingTop="0dp"/>
+            android:paddingTop="0dp"
+            android:paddingLeft="10dp"
+            android:paddingBottom="33dp"/>
 
     </LinearLayout>
 
