proper height of listview

--- a/app/src/main/res/layout/fragment_main_new.xml
+++ b/app/src/main/res/layout/fragment_main_new.xml
@@ -5,73 +5,74 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     tools:context="com.example.agnieszka.kidneyapp20.MainActivityFragment"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:fillViewport="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/kidney_light_blue"
-        android:padding="0dip" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/kidney_light_blue"
-        android:padding="10dip" >
-
-        <Button
-            android:text="Add the meal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/add_food_button"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            android:backgroundTint="@color/kidney_red"
-            android:layout_marginTop="25dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="25dp"/>
-
-        <Button
-            android:text="Delete all records"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/delete_all_button"
-            android:textSize="22sp"
-            android:backgroundTint="@color/kidney_red"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="25dp"/>
-
-</LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white">
-
-        <ListView
-            style="@style/ForecastListStyle"
-            android:id="@+id/listview_values"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:divider="@color/kidney_dark_blue"
-            android:dividerHeight="1dip"
-            android:layout_weight="4"/>
+            android:orientation="vertical"
+            android:background="@color/kidney_light_blue"
+            android:padding="0dip" >
 
-        <ListView
-            style="@style/ForecastListStyle"
-            android:id="@+id/listview_journal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@color/kidney_dark_blue"
-            android:dividerHeight="1dip"
-            android:layout_weight="3"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@color/kidney_light_blue"
+                    android:padding="10dip" >
 
+                        <Button
+                            android:text="Add the meal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/add_food_button"
+                            android:textColor="@color/white"
+                            android:textSize="22sp"
+                            android:backgroundTint="@color/kidney_red"
+                            android:layout_marginTop="25dp"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_marginBottom="25dp"/>
+
+                        <Button
+                            android:text="Delete all records"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/delete_all_button"
+                            android:textSize="22sp"
+                            android:backgroundTint="@color/kidney_red"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_marginBottom="25dp"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white">
+
+                        <ListView
+                            style="@style/ForecastListStyle"
+                            android:id="@+id/listview_values"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:divider="@color/kidney_dark_blue"
+                            android:dividerHeight="1dip"
+                            android:layout_weight="4"/>
+
+                        <ListView
+                            style="@style/ForecastListStyle"
+                            android:id="@+id/listview_journal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:divider="@color/kidney_dark_blue"
+                            android:dividerHeight="1dip"
+                            android:layout_weight="3"/>
+
+
+                </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
 
 </ScrollView>
