--- a/app/src/main/res/layout/fragment_detail2.xml
+++ b/app/src/main/res/layout/fragment_detail2.xml
@@ -9,6 +9,14 @@
         android:orientation="vertical"
         android:padding="10dip" >
 
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:gravity="left"
+        android:paddingLeft="0dp">
+
         <ImageView
             android:id="@+id/list_item_date_icon"
             android:layout_width="wrap_content"
@@ -19,13 +27,18 @@
         <TextView android:layout_width="wrap_content"
             android:id="@+id/detail_date"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingLeft="10dp"
             />
+
+        </LinearLayout>
 
         <TextView android:layout_width="wrap_content"
             android:id="@+id/detail_food_name"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingTop="20dp"
             android:text="Product name:"
             />
 
@@ -38,8 +51,18 @@
         <TextView android:layout_width="wrap_content"
             android:id="@+id/detail_amount"
             android:layout_height="wrap_content"
+            android:paddingTop="20dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             />
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:gravity="left"
+        android:paddingTop="20dp"
+        android:paddingLeft="0dp">
 
         <ImageView
             android:id="@+id/list_item_icon"
@@ -49,9 +72,21 @@
             android:src="@drawable/sztucce50"/>
 
         <TextView android:layout_width="wrap_content"
+            android:id="@+id/detail_food_values"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_gravity="center"
+            android:paddingLeft="10dp"
+            android:text="Nutritional values:"
+            />
+
+        </LinearLayout>
+
+        <TextView android:layout_width="wrap_content"
             android:id="@+id/detail_text"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingTop="20dp"
             />
 
         <Button
