--- a/app/src/main/res/layout/fragment_main_new.xml
+++ b/app/src/main/res/layout/fragment_main_new.xml
@@ -23,10 +23,23 @@
                     android:padding="10dip" >
 
                         <Button
-                            android:text="Add the meal"
+                    android:text="Add the meal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/add_food_button"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    android:backgroundTint="@color/kidney_red"
+                    android:layout_marginTop="25dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="25dp"/>
+
+                        <Button
+                            android:text="test"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/add_food_button"
+                            android:id="@+id/test_button"
                             android:textColor="@color/white"
                             android:textSize="22sp"
                             android:backgroundTint="@color/kidney_red"
@@ -35,16 +48,15 @@
                             android:layout_alignParentStart="true"
                             android:layout_marginBottom="25dp"/>
 
-                        <Button
-                            android:text="Delete all records"
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/delete_all_button"
-                            android:textSize="22sp"
-                            android:backgroundTint="@color/kidney_red"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentStart="true"
-                            android:layout_marginBottom="25dp"/>
+                            android:textColor="@color/white"
+                            android:fontFamily="sans-serif-condensed"
+                            android:id="@+id/todays_summary"
+                            android:text="Today's summary:"
+                            android:textSize="26sp"/>
+
 
                 </LinearLayout>
                 <LinearLayout
