--- a/app/src/main/res/layout/fragment_detail2.xml
+++ b/app/src/main/res/layout/fragment_detail2.xml
@@ -94,11 +94,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/delete_button"
-            android:backgroundTint="@color/kidney_light_blue"
-            android:layout_marginTop="25dp"
+            android:backgroundTint="@color/kidney_red"
+            android:layout_marginTop="35dp"
+            android:textColor="@android:color/white"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="25dp"/>
+            android:layout_marginBottom="5dp"
+            android:textSize="20sp"/>
 
         <TextView android:layout_width="wrap_content"
             android:id="@+id/uri_text"
