--- a/app/src/main/res/layout/fragment_main_new.xml
+++ b/app/src/main/res/layout/fragment_main_new.xml
@@ -37,10 +37,23 @@
 
 
                         <Button
-                            android:text="Dialysis"
+                    android:text="Dialysis"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dialysis"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:backgroundTint="@color/kidney_red"
+                    android:layout_marginTop="10dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="0dp"/>
+
+                        <Button
+                            android:text="sql"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/dialysis"
+                            android:id="@+id/yourbuttonid"
                             android:textColor="@color/white"
                             android:textSize="20sp"
                             android:backgroundTint="@color/kidney_red"
