--- a/app/src/main/res/layout/list_item_kidney_journal_adapter.xml
+++ b/app/src/main/res/layout/list_item_kidney_journal_adapter.xml
@@ -6,7 +6,7 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
-    android:padding="14dp">
+    android:padding="12dp">
 
     <LinearLayout
         android:layout_height="wrap_content"
@@ -14,7 +14,8 @@
         android:layout_weight="1"
         android:orientation="horizontal"
         android:gravity="left"
-        android:paddingLeft="0dp">
+        android:paddingLeft="0dp"
+        android:paddingBottom="0dp">
 
     <ImageView
         android:id="@+id/list_item_icon"
@@ -26,10 +27,11 @@
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?android:attr/listPreferredItemHeight"
+
         android:layout_gravity="center_vertical"
         android:id="@+id/list_item_kidney_journal_adapter_textview2"
-        android:paddingTop="4dp"/>
+        android:paddingTop="2dp"
+        android:textSize="18sp"/>
 
         </LinearLayout>
 
@@ -38,7 +40,7 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:layout_below="@id/list_item_kidney_journal_adapter_textview2"
+    android:paddingTop="5dp"
     android:id="@+id/list_item_kidney_journal_adapter_textview" />
 
 </LinearLayout>
