--- a/app/src/main/res/layout/fragment_main_new.xml
+++ b/app/src/main/res/layout/fragment_main_new.xml
@@ -86,8 +86,17 @@
                             android:textColor="@color/white"
                             android:fontFamily="sans-serif-condensed"
                             android:id="@+id/fluid_intake"
-                            android:text="Today's summary:"
                             android:textSize="16sp"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:fontFamily="sans-serif-condensed"
+                            android:id="@+id/time_left"
+                            android:text="time left"
+                            android:textSize="16sp"/>
+
 
                 </LinearLayout>
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
